--- a/source/scss/components/navbar/_nav.scss
+++ b/source/scss/components/navbar/_nav.scss
@@ -1,8 +1,11 @@
 nav {
-    margin: 0px auto;
+    margin: $navbar-margin;
     width: $navbar-width;
     height: $navbar-height;
     padding: $navbar-padding;
-    background-image: linear-gradient(rgba(#000,0.9), $navbar-bgcolor);
     box-shadow: $navbar-box-shadow;
 }
+
+@include theme('blue-theme', $navbar-blue-color, $navbar-blue-bgcolor, $navbar-blue-border);
+@include theme('green-theme', $navbar-green-color, $navbar-green-bgcolor, $navbar-green-border);
+@include theme('orange-theme', $navbar-orange-color, $navbar-orange-bgcolor, $navbar-orange-border);
