--- a/source/scss/partials/_variables.scss
+++ b/source/scss/partials/_variables.scss
@@ -9,20 +9,33 @@ $base-font-weight: 500;
  * Components Variables
  *---------------------*/
 
-/*------ Navbar -------*/
-$navbar-bgcolor: #34495e;
+/*------ Navbar Config. -------*/
+$navbar-margin: 0px auto;
 $navbar-width: 600px;
 $navbar-height: 80px;
 $navbar-padding: 0 30px;
+
+$navbar-link-margin-top: (($navbar-height / 2) - 10px);
+$navbar-link-text-decoration: none;
+$navbar-link-padding: 29px 20px; // TODO do the math for this padding based on the navbar-height
+
+// These colors remains the same regardless the color theme
+$navbar-link-hover-box-shadow: 0px 0px 15px #fff;
 $navbar-box-shadow: 0px 5px 15px #7f8c8d;
 
+/*------ Navbar Themes -------*/
 
-/*------ Navbar Brand/Links -------*/
-$navbar-link-margin-top: (($navbar-height / 2) - 10px);
-$navbar-link-color: #3498db;
-$navbar-link-text-decoration: none;
-$navbar-link-padding: 29px 20px;
-$navbar-link-hover-color: #fff;//#1abc9c;
-$navbar-link-hover-bgcolor: #2c3e50;
-$navbar-link-hover-border-bottom: 4px solid #2980b9;
-$navbar-link-hover-box-shadow: 0px 0px 15px #fff;
+// BLUE
+$navbar-blue-bgcolor: #20638f;
+$navbar-blue-color: #3498db;
+$navbar-blue-border: 4px solid #3498db;
+
+// GREEN
+$navbar-green-bgcolor: #186b3b;
+$navbar-green-color: #25a25a;
+$navbar-green-border: 4px solid #25a25a;
+
+// SILVER
+$navbar-orange-bgcolor: #d35400;
+$navbar-orange-color: #e67e22;
+$navbar-orange-border: 4px solid #e67e22;
